--- a/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
+++ b/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
@@ -10,6 +10,8 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="Login" class="btn btn-primary">Login</button>
+      <button type = "GithubLogin" class = "btn btn-primary">Login with Github</button>
+      <
     </form>
   </div>
