--- a/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
+++ b/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
@@ -11,7 +11,9 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
       </div>
       <button type="Login" class="btn btn-primary">Login</button>
+      <small id="OR-text" class="form-text ">OR</small>
       <button type = "GithubLogin" class = "btn btn-primary">Login with Github</button>
-      <
+      <small id="newUser" class="form-text ">New User?<a href=""> Register</a></p></small>
+      <small id="forgotPassword" class="form-text ">Forgot Password? <a href=""> Reset</a></small>
     </form>
   </div>
