--- a/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
+++ b/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
@@ -1,19 +1,27 @@
 <div class="container">
-    <form>
+    <form action="/login" method="POST">
+      <!-- this post request return everything with a name in the form and stores it inside req.body -->
       <div class="form-group">
         <h3 class="text-center">Login</h3>
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
       </div>
-      <button type="Login" class="btn btn-primary">Login</button>
-      <small id="OR-text" class="form-text ">OR</small>
-      <button type = "GithubLogin" class = "btn btn-primary">Login with Github</button>
-      <small id="newUser" class="form-text ">New User?<a href=""> Register</a></p></small>
-      <small id="forgotPassword" class="form-text ">Forgot Password? <a href=""> Reset</a></small>
+      <button type="submit" class="btn btn-primary">Login</button>
+        <!-- <div class="form-group">
+      <div class="form-group"> -->
     </form>
+    <form action="/auth/github" method="GET">
+      <small id="OR-text" class="form-text ">OR</small>
+        <button type="GithubLogin" class="btn btn-primary">Login with Github</button>
+    </form>
+    <form action="/auth/" method="GET">
+        <small id="newUser" class="form-text ">New User?<a href=""> Register</a></p></small>
+        <small id="forgotPassword" class="form-text ">Forgot Password? <a href=""> Reset</a></small>
+      <!-- <div class="form-group"> -->
+    </div>
   </div>
