--- a/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
+++ b/reminderAppStarterFile/reminderAppStarterFile/views/auth/login.ejs
@@ -23,5 +23,6 @@
         <small id="newUser" class="form-text ">New User?<a href=""> Register</a></p></small>
         <small id="forgotPassword" class="form-text ">Forgot Password? <a href=""> Reset</a></small>
       <!-- <div class="form-group"> -->
-    </div>
+    <!-- </div> -->
+      </form>
   </div>
